base64的加密改为用org.apache.commons.codec.binary.Base64 加密解密